--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "node-notflix",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "notflix.js",
-  "scripts": {
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "GPL3",
   "description": "",
   "dependencies": {
+    "clivas": "^0.2.0",
     "node-fetch": "^2.6.7"
   }
 }
